--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -92,7 +92,7 @@ The following packages will be downloaded:
     kiwisolver-1.4.4           |   py39hf939315_0          76 KB  conda-forge
     krb5-1.19.3                |       h3790be6_0         1.4 MB  conda-forge
     lcms2-2.12                 |       hddcbb42_0         443 KB  conda-forge
-    lerc-3.0                   |       h9c3ff4c_0         216 KB  conda-forge
+    lerc-4.0.0                 |       h27087fc_0         275 KB  conda-forge
     libbrotlicommon-1.0.9      |       h166bdaf_7          65 KB  conda-forge
     libbrotlidec-1.0.9         |       h166bdaf_7          33 KB  conda-forge
     libbrotlienc-1.0.9         |       h166bdaf_7         287 KB  conda-forge
@@ -113,7 +113,7 @@ The following packages will be downloaded:
     libpng-1.6.37              |       h753d276_3         331 KB  conda-forge
     libpq-14.4                 |       hd77ab85_0         2.9 MB  conda-forge
     libsndfile-1.0.31          |       h9c3ff4c_1         602 KB  conda-forge
-    libtiff-4.4.0              |       hc85c160_1         638 KB  conda-forge
+    libtiff-4.4.0              |       h0d92c0b_2         660 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-249               |       h166bdaf_4         109 KB  conda-forge
     libvorbis-1.3.7            |       h9c3ff4c_0         280 KB  conda-forge
@@ -156,7 +156,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h8a70e8d_2         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       260.7 MB
+                                           Total:       260.8 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -190,7 +190,7 @@ The following NEW packages will be INSTALLED:
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py39hf939315_0
   krb5               conda-forge/linux-64::krb5-1.19.3-h3790be6_0
   lcms2              conda-forge/linux-64::lcms2-2.12-hddcbb42_0
-  lerc               conda-forge/linux-64::lerc-3.0-h9c3ff4c_0
+  lerc               conda-forge/linux-64::lerc-4.0.0-h27087fc_0
   libbrotlicommon    conda-forge/linux-64::libbrotlicommon-1.0.9-h166bdaf_7
   libbrotlidec       conda-forge/linux-64::libbrotlidec-1.0.9-h166bdaf_7
   libbrotlienc       conda-forge/linux-64::libbrotlienc-1.0.9-h166bdaf_7
@@ -211,7 +211,7 @@ The following NEW packages will be INSTALLED:
   libpng             conda-forge/linux-64::libpng-1.6.37-h753d276_3
   libpq              conda-forge/linux-64::libpq-14.4-hd77ab85_0
   libsndfile         conda-forge/linux-64::libsndfile-1.0.31-h9c3ff4c_1
-  libtiff            conda-forge/linux-64::libtiff-4.4.0-hc85c160_1
+  libtiff            conda-forge/linux-64::libtiff-4.4.0-h0d92c0b_2
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008
   libudev1           conda-forge/linux-64::libudev1-249-h166bdaf_4
   libvorbis          conda-forge/linux-64::libvorbis-1.3.7-h9c3ff4c_0
@@ -306,4 +306,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Thursday 28 July 2022 12:26">Thursday 28 July 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Thursday 28 July 2022 18:17">Thursday 28 July 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
