--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -99,7 +99,7 @@ The following packages will be downloaded:
     libclang13-14.0.6          |default_h3a83d3e_0        10.6 MB  conda-forge
     libcups-2.3.3              |       hf5a7f15_1         4.6 MB  conda-forge
     libdb-6.2.32               |       h9c3ff4c_0        23.3 MB  conda-forge
-    libdeflate-1.12            |       h166bdaf_0          78 KB  conda-forge
+    libdeflate-1.13            |       h166bdaf_0          79 KB  conda-forge
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
     libevent-2.1.10            |       h9b69904_4         1.1 MB  conda-forge
     libflac-1.3.4              |       h27087fc_0         474 KB  conda-forge
@@ -111,7 +111,7 @@ The following packages will be downloaded:
     libpng-1.6.37              |       h753d276_3         331 KB  conda-forge
     libpq-14.4                 |       hd77ab85_0         2.9 MB  conda-forge
     libsndfile-1.0.31          |       h9c3ff4c_1         602 KB  conda-forge
-    libtiff-4.4.0              |       h0d92c0b_2         660 KB  conda-forge
+    libtiff-4.4.0              |       h0e0dad5_3         642 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-249               |       h166bdaf_4         109 KB  conda-forge
     libvorbis-1.3.7            |       h9c3ff4c_0         280 KB  conda-forge
@@ -154,7 +154,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h8a70e8d_2         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       259.8 MB
+                                           Total:       259.7 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -197,7 +197,7 @@ The following NEW packages will be INSTALLED:
   libclang13         conda-forge/linux-64::libclang13-14.0.6-default_h3a83d3e_0
   libcups            conda-forge/linux-64::libcups-2.3.3-hf5a7f15_1
   libdb              conda-forge/linux-64::libdb-6.2.32-h9c3ff4c_0
-  libdeflate         conda-forge/linux-64::libdeflate-1.12-h166bdaf_0
+  libdeflate         conda-forge/linux-64::libdeflate-1.13-h166bdaf_0
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2
   libevent           conda-forge/linux-64::libevent-2.1.10-h9b69904_4
   libflac            conda-forge/linux-64::libflac-1.3.4-h27087fc_0
@@ -209,7 +209,7 @@ The following NEW packages will be INSTALLED:
   libpng             conda-forge/linux-64::libpng-1.6.37-h753d276_3
   libpq              conda-forge/linux-64::libpq-14.4-hd77ab85_0
   libsndfile         conda-forge/linux-64::libsndfile-1.0.31-h9c3ff4c_1
-  libtiff            conda-forge/linux-64::libtiff-4.4.0-h0d92c0b_2
+  libtiff            conda-forge/linux-64::libtiff-4.4.0-h0e0dad5_3
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008
   libudev1           conda-forge/linux-64::libudev1-249-h166bdaf_4
   libvorbis          conda-forge/linux-64::libvorbis-1.3.7-h9c3ff4c_0
@@ -299,4 +299,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 6 August 2022 12:21">Saturday 6 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 6 August 2022 18:16">Saturday 6 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
