--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -61,7 +61,7 @@ The following packages will be downloaded:
     package                    |            build
     ---------------------------|-----------------
     alsa-lib-1.2.6.1           |       h7f98852_0         578 KB  conda-forge
-    attr-2.5.1                 |       h166bdaf_0          69 KB  conda-forge
+    attr-2.5.1                 |       h166bdaf_1          69 KB  conda-forge
     brotli-1.0.9               |       h166bdaf_7          18 KB  conda-forge
     brotli-bin-1.0.9           |       h166bdaf_7          19 KB  conda-forge
     cycler-0.11.0              |     pyhd8ed1ab_0          10 KB  conda-forge
@@ -76,7 +76,7 @@ The following packages will be downloaded:
     fonts-conda-ecosystem-1    |                0           4 KB  conda-forge
     fonts-conda-forge-1        |                0           4 KB  conda-forge
     fonttools-4.34.4           |   py39hb9d737c_0         1.6 MB  conda-forge
-    freetype-2.10.4            |       h0708190_1         890 KB  conda-forge
+    freetype-2.10.4            |       hca18f0e_2         913 KB  conda-forge
     gettext-0.19.8.1           |    h73d1719_1008         3.6 MB  conda-forge
     giflib-5.2.1               |       h36c2ea0_2          77 KB  conda-forge
     glib-2.72.1                |       h6239696_0         443 KB  conda-forge
@@ -159,7 +159,7 @@ The following packages will be downloaded:
 The following NEW packages will be INSTALLED:
 
   alsa-lib           conda-forge/linux-64::alsa-lib-1.2.6.1-h7f98852_0
-  attr               conda-forge/linux-64::attr-2.5.1-h166bdaf_0
+  attr               conda-forge/linux-64::attr-2.5.1-h166bdaf_1
   brotli             conda-forge/linux-64::brotli-1.0.9-h166bdaf_7
   brotli-bin         conda-forge/linux-64::brotli-bin-1.0.9-h166bdaf_7
   cycler             conda-forge/noarch::cycler-0.11.0-pyhd8ed1ab_0
@@ -174,7 +174,7 @@ The following NEW packages will be INSTALLED:
   fonts-conda-ecosy~ conda-forge/noarch::fonts-conda-ecosystem-1-0
   fonts-conda-forge  conda-forge/noarch::fonts-conda-forge-1-0
   fonttools          conda-forge/linux-64::fonttools-4.34.4-py39hb9d737c_0
-  freetype           conda-forge/linux-64::freetype-2.10.4-h0708190_1
+  freetype           conda-forge/linux-64::freetype-2.10.4-hca18f0e_2
   gettext            conda-forge/linux-64::gettext-0.19.8.1-h73d1719_1008
   giflib             conda-forge/linux-64::giflib-5.2.1-h36c2ea0_2
   glib               conda-forge/linux-64::glib-2.72.1-h6239696_0
@@ -299,4 +299,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Tuesday 9 August 2022 12:24">Tuesday 9 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Tuesday 9 August 2022 18:17">Tuesday 9 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
