build based on 4050350

--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -78,7 +78,6 @@ The following packages will be downloaded:
     fonttools-4.34.4           |   py39hb9d737c_0         1.6 MB  conda-forge
     freetype-2.10.4            |       hca18f0e_2         913 KB  conda-forge
     gettext-0.19.8.1           |    h73d1719_1008         3.6 MB  conda-forge
-    giflib-5.2.1               |       h36c2ea0_2          77 KB  conda-forge
     glib-2.72.1                |       h6239696_0         443 KB  conda-forge
     glib-tools-2.72.1          |       h6239696_0         107 KB  conda-forge
     gst-plugins-base-1.20.3    |       hf6a322e_0         2.8 MB  conda-forge
@@ -97,7 +96,7 @@ The following packages will be downloaded:
     libcap-2.64                |       ha37c62d_0          96 KB  conda-forge
     libclang-14.0.6            |default_h2e3cab8_0         127 KB  conda-forge
     libclang13-14.0.6          |default_h3a83d3e_0        10.6 MB  conda-forge
-    libcups-2.3.3              |       hf5a7f15_1         4.6 MB  conda-forge
+    libcups-2.3.3              |       h3e49a29_2         4.5 MB  conda-forge
     libdb-6.2.32               |       h9c3ff4c_0        23.3 MB  conda-forge
     libdeflate-1.13            |       h166bdaf_0          79 KB  conda-forge
     libedit-3.1.20191231       |       he28a2e2_2         121 KB  conda-forge
@@ -108,18 +107,17 @@ The following packages will be downloaded:
     libllvm14-14.0.6           |       he0ac6c6_0        35.2 MB  conda-forge
     libogg-1.3.4               |       h7f98852_1         206 KB  conda-forge
     libopus-1.3.1              |       h7f98852_1         255 KB  conda-forge
-    libpng-1.6.37              |       h753d276_3         331 KB  conda-forge
+    libpng-1.6.37              |       h753d276_4         371 KB  conda-forge
     libpq-14.5                 |       hd77ab85_0         3.0 MB  conda-forge
     libsndfile-1.0.31          |       h9c3ff4c_1         602 KB  conda-forge
     libtiff-4.4.0              |       h0e0dad5_3         642 KB  conda-forge
     libtool-2.4.6              |    h9c3ff4c_1008         511 KB  conda-forge
     libudev1-249               |       h166bdaf_4         109 KB  conda-forge
     libvorbis-1.3.7            |       h9c3ff4c_0         280 KB  conda-forge
-    libwebp-1.2.3              |       h522a892_1          87 KB  conda-forge
-    libwebp-base-1.2.3         |       h166bdaf_2         392 KB  conda-forge
+    libwebp-base-1.2.4         |       h166bdaf_0         404 KB  conda-forge
     libxcb-1.13                |    h7f98852_1004         391 KB  conda-forge
     libxkbcommon-1.0.3         |       he3ba5ed_0         581 KB  conda-forge
-    libxml2-2.9.14             |       h22db469_3         781 KB  conda-forge
+    libxml2-2.9.14             |       h22db469_4         771 KB  conda-forge
     lz4-c-1.9.3                |       h9c3ff4c_1         179 KB  conda-forge
     matplotlib-3.5.2           |   py39hf3d152e_1           7 KB  conda-forge
     matplotlib-base-3.5.2      |   py39h700656a_1         7.4 MB  conda-forge
@@ -131,7 +129,7 @@ The following packages will be downloaded:
     openjpeg-2.4.0             |       hb52868f_1         444 KB  conda-forge
     packaging-21.3             |     pyhd8ed1ab_0          36 KB  conda-forge
     pcre-8.45                  |       h9c3ff4c_0         253 KB  conda-forge
-    pillow-9.2.0               |   py39hae2aec6_0        45.2 MB  conda-forge
+    pillow-9.2.0               |   py39hae2aec6_1        45.0 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
     portaudio-19.6.0           |       h57a0ea0_5         131 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
@@ -154,7 +152,7 @@ The following packages will be downloaded:
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
     zstd-1.5.2                 |       h8a70e8d_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       259.9 MB
+                                           Total:       259.6 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -176,7 +174,6 @@ The following NEW packages will be INSTALLED:
   fonttools          conda-forge/linux-64::fonttools-4.34.4-py39hb9d737c_0
   freetype           conda-forge/linux-64::freetype-2.10.4-hca18f0e_2
   gettext            conda-forge/linux-64::gettext-0.19.8.1-h73d1719_1008
-  giflib             conda-forge/linux-64::giflib-5.2.1-h36c2ea0_2
   glib               conda-forge/linux-64::glib-2.72.1-h6239696_0
   glib-tools         conda-forge/linux-64::glib-tools-2.72.1-h6239696_0
   gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.20.3-hf6a322e_0
@@ -195,7 +192,7 @@ The following NEW packages will be INSTALLED:
   libcap             conda-forge/linux-64::libcap-2.64-ha37c62d_0
   libclang           conda-forge/linux-64::libclang-14.0.6-default_h2e3cab8_0
   libclang13         conda-forge/linux-64::libclang13-14.0.6-default_h3a83d3e_0
-  libcups            conda-forge/linux-64::libcups-2.3.3-hf5a7f15_1
+  libcups            conda-forge/linux-64::libcups-2.3.3-h3e49a29_2
   libdb              conda-forge/linux-64::libdb-6.2.32-h9c3ff4c_0
   libdeflate         conda-forge/linux-64::libdeflate-1.13-h166bdaf_0
   libedit            conda-forge/linux-64::libedit-3.1.20191231-he28a2e2_2
@@ -206,18 +203,17 @@ The following NEW packages will be INSTALLED:
   libllvm14          conda-forge/linux-64::libllvm14-14.0.6-he0ac6c6_0
   libogg             conda-forge/linux-64::libogg-1.3.4-h7f98852_1
   libopus            conda-forge/linux-64::libopus-1.3.1-h7f98852_1
-  libpng             conda-forge/linux-64::libpng-1.6.37-h753d276_3
+  libpng             conda-forge/linux-64::libpng-1.6.37-h753d276_4
   libpq              conda-forge/linux-64::libpq-14.5-hd77ab85_0
   libsndfile         conda-forge/linux-64::libsndfile-1.0.31-h9c3ff4c_1
   libtiff            conda-forge/linux-64::libtiff-4.4.0-h0e0dad5_3
   libtool            conda-forge/linux-64::libtool-2.4.6-h9c3ff4c_1008
   libudev1           conda-forge/linux-64::libudev1-249-h166bdaf_4
   libvorbis          conda-forge/linux-64::libvorbis-1.3.7-h9c3ff4c_0
-  libwebp            conda-forge/linux-64::libwebp-1.2.3-h522a892_1
-  libwebp-base       conda-forge/linux-64::libwebp-base-1.2.3-h166bdaf_2
+  libwebp-base       conda-forge/linux-64::libwebp-base-1.2.4-h166bdaf_0
   libxcb             conda-forge/linux-64::libxcb-1.13-h7f98852_1004
   libxkbcommon       conda-forge/linux-64::libxkbcommon-1.0.3-he3ba5ed_0
-  libxml2            conda-forge/linux-64::libxml2-2.9.14-h22db469_3
+  libxml2            conda-forge/linux-64::libxml2-2.9.14-h22db469_4
   lz4-c              conda-forge/linux-64::lz4-c-1.9.3-h9c3ff4c_1
   matplotlib         conda-forge/linux-64::matplotlib-3.5.2-py39hf3d152e_1
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.5.2-py39h700656a_1
@@ -229,7 +225,7 @@ The following NEW packages will be INSTALLED:
   openjpeg           conda-forge/linux-64::openjpeg-2.4.0-hb52868f_1
   packaging          conda-forge/noarch::packaging-21.3-pyhd8ed1ab_0
   pcre               conda-forge/linux-64::pcre-8.45-h9c3ff4c_0
-  pillow             conda-forge/linux-64::pillow-9.2.0-py39hae2aec6_0
+  pillow             conda-forge/linux-64::pillow-9.2.0-py39hae2aec6_1
   ply                conda-forge/noarch::ply-3.11-py_1
   portaudio          conda-forge/linux-64::portaudio-19.6.0-h57a0ea0_5
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
@@ -299,4 +295,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Friday 12 August 2022 18:18">Friday 12 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 13 August 2022 00:48">Saturday 13 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
