--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -118,7 +118,6 @@ The following packages will be downloaded:
     libxcb-1.13                |    h7f98852_1004         391 KB  conda-forge
     libxkbcommon-1.0.3         |       he3ba5ed_0         581 KB  conda-forge
     libxml2-2.9.14             |       h22db469_4         771 KB  conda-forge
-    lz4-c-1.9.3                |       h9c3ff4c_1         179 KB  conda-forge
     matplotlib-3.5.3           |   py39hf3d152e_1           7 KB  conda-forge
     matplotlib-base-3.5.3      |   py39h700656a_1         7.4 MB  conda-forge
     munkres-1.1.4              |     pyh9f0ad1d_0          12 KB  conda-forge
@@ -150,9 +149,9 @@ The following packages will be downloaded:
     xcb-util-wm-0.4.1          |       h166bdaf_0          55 KB  conda-forge
     xorg-libxau-1.0.9          |       h7f98852_0          13 KB  conda-forge
     xorg-libxdmcp-1.1.3        |       h7f98852_0          19 KB  conda-forge
-    zstd-1.5.2                 |       h8a70e8d_4         448 KB  conda-forge
+    zstd-1.5.2                 |       h6239696_4         448 KB  conda-forge
     ------------------------------------------------------------
-                                           Total:       259.7 MB
+                                           Total:       259.5 MB
 
 The following NEW packages will be INSTALLED:
 
@@ -214,7 +213,6 @@ The following NEW packages will be INSTALLED:
   libxcb             conda-forge/linux-64::libxcb-1.13-h7f98852_1004
   libxkbcommon       conda-forge/linux-64::libxkbcommon-1.0.3-he3ba5ed_0
   libxml2            conda-forge/linux-64::libxml2-2.9.14-h22db469_4
-  lz4-c              conda-forge/linux-64::lz4-c-1.9.3-h9c3ff4c_1
   matplotlib         conda-forge/linux-64::matplotlib-3.5.3-py39hf3d152e_1
   matplotlib-base    conda-forge/linux-64::matplotlib-base-3.5.3-py39h700656a_1
   munkres            conda-forge/noarch::munkres-1.1.4-pyh9f0ad1d_0
@@ -246,7 +244,7 @@ The following NEW packages will be INSTALLED:
   xcb-util-wm        conda-forge/linux-64::xcb-util-wm-0.4.1-h166bdaf_0
   xorg-libxau        conda-forge/linux-64::xorg-libxau-1.0.9-h7f98852_0
   xorg-libxdmcp      conda-forge/linux-64::xorg-libxdmcp-1.1.3-h7f98852_0
-  zstd               conda-forge/linux-64::zstd-1.5.2-h8a70e8d_4
+  zstd               conda-forge/linux-64::zstd-1.5.2-h6239696_4
 
 
 Preparing transaction: ...working... done
@@ -295,4 +293,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 17 August 2022 12:24">Wednesday 17 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Wednesday 17 August 2022 18:18">Wednesday 17 August 2022</span>. Using Julia version 1.7.3.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
