build based on 08516f6

--- a/dev/why_binning/index.html
+++ b/dev/why_binning/index.html
@@ -60,7 +60,7 @@ The following packages will be downloaded:
 
     package                    |            build
     ---------------------------|-----------------
-    alsa-lib-1.2.6.1           |       h7f98852_0         578 KB  conda-forge
+    alsa-lib-1.2.7.2           |       h166bdaf_0         581 KB  conda-forge
     attr-2.5.1                 |       h166bdaf_1          69 KB  conda-forge
     brotli-1.0.9               |       h166bdaf_7          18 KB  conda-forge
     brotli-bin-1.0.9           |       h166bdaf_7          19 KB  conda-forge
@@ -80,10 +80,10 @@ The following packages will be downloaded:
     gettext-0.19.8.1           |    h73d1719_1008         3.6 MB  conda-forge
     glib-2.72.1                |       h6239696_0         443 KB  conda-forge
     glib-tools-2.72.1          |       h6239696_0         107 KB  conda-forge
-    gst-plugins-base-1.20.3    |       hf6a322e_0         2.8 MB  conda-forge
+    gst-plugins-base-1.20.3    |       h57caac4_1         2.8 MB  conda-forge
     gstreamer-1.20.3           |       hd4edc92_1         2.0 MB  conda-forge
     icu-70.1                   |       h27087fc_0        13.5 MB  conda-forge
-    jack-1.9.18                |    h8c3723f_1002         643 KB  conda-forge
+    jack-1.9.18                |    h8c3723f_1003         647 KB  conda-forge
     jpeg-9e                    |       h166bdaf_2         269 KB  conda-forge
     keyutils-1.6.1             |       h166bdaf_0         115 KB  conda-forge
     kiwisolver-1.4.4           |  py310hbf28c38_0          76 KB  conda-forge
@@ -93,7 +93,7 @@ The following packages will be downloaded:
     libbrotlicommon-1.0.9      |       h166bdaf_7          65 KB  conda-forge
     libbrotlidec-1.0.9         |       h166bdaf_7          33 KB  conda-forge
     libbrotlienc-1.0.9         |       h166bdaf_7         287 KB  conda-forge
-    libcap-2.64                |       ha37c62d_0          96 KB  conda-forge
+    libcap-2.65                |       ha37c62d_0          97 KB  conda-forge
     libclang-14.0.6            |default_h2e3cab8_0         127 KB  conda-forge
     libclang13-14.0.6          |default_h3a83d3e_0        10.6 MB  conda-forge
     libcups-2.3.3              |       h3e49a29_2         4.5 MB  conda-forge
@@ -131,14 +131,14 @@ The following packages will be downloaded:
     pcre-8.45                  |       h9c3ff4c_0         253 KB  conda-forge
     pillow-9.2.0               |  py310hbd86126_2        45.0 MB  conda-forge
     ply-3.11                   |             py_1          44 KB  conda-forge
-    portaudio-19.6.0           |       h57a0ea0_5         131 KB  conda-forge
+    portaudio-19.6.0           |       h8e90077_6         132 KB  conda-forge
     pthread-stubs-0.4          |    h36c2ea0_1001           5 KB  conda-forge
-    pulseaudio-14.0            |       h7f54b18_8         1.7 MB  conda-forge
+    pulseaudio-14.0            |       h0868958_9         1.7 MB  conda-forge
     pyparsing-3.0.9            |     pyhd8ed1ab_0          79 KB  conda-forge
     pyqt-5.15.7                |  py310h29803b5_0         6.2 MB  conda-forge
     pyqt5-sip-12.11.0          |  py310hd8f1fbe_0          86 KB  conda-forge
     python-dateutil-2.8.2      |     pyhd8ed1ab_0         240 KB  conda-forge
-    qt-main-5.15.4             |       ha5833f6_2        61.5 MB  conda-forge
+    qt-main-5.15.6             |       hc525480_0        61.5 MB  conda-forge
     sip-6.6.2                  |  py310hd8f1fbe_0         522 KB  conda-forge
     sqlite-3.39.3              |       h4ff8645_0         789 KB  conda-forge
     toml-0.10.2                |     pyhd8ed1ab_0          18 KB  conda-forge
@@ -157,7 +157,7 @@ The following packages will be downloaded:
 
 The following NEW packages will be INSTALLED:
 
-  alsa-lib           conda-forge/linux-64::alsa-lib-1.2.6.1-h7f98852_0
+  alsa-lib           conda-forge/linux-64::alsa-lib-1.2.7.2-h166bdaf_0
   attr               conda-forge/linux-64::attr-2.5.1-h166bdaf_1
   brotli             conda-forge/linux-64::brotli-1.0.9-h166bdaf_7
   brotli-bin         conda-forge/linux-64::brotli-bin-1.0.9-h166bdaf_7
@@ -177,10 +177,10 @@ The following NEW packages will be INSTALLED:
   gettext            conda-forge/linux-64::gettext-0.19.8.1-h73d1719_1008
   glib               conda-forge/linux-64::glib-2.72.1-h6239696_0
   glib-tools         conda-forge/linux-64::glib-tools-2.72.1-h6239696_0
-  gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.20.3-hf6a322e_0
+  gst-plugins-base   conda-forge/linux-64::gst-plugins-base-1.20.3-h57caac4_1
   gstreamer          conda-forge/linux-64::gstreamer-1.20.3-hd4edc92_1
   icu                conda-forge/linux-64::icu-70.1-h27087fc_0
-  jack               conda-forge/linux-64::jack-1.9.18-h8c3723f_1002
+  jack               conda-forge/linux-64::jack-1.9.18-h8c3723f_1003
   jpeg               conda-forge/linux-64::jpeg-9e-h166bdaf_2
   keyutils           conda-forge/linux-64::keyutils-1.6.1-h166bdaf_0
   kiwisolver         conda-forge/linux-64::kiwisolver-1.4.4-py310hbf28c38_0
@@ -190,7 +190,7 @@ The following NEW packages will be INSTALLED:
   libbrotlicommon    conda-forge/linux-64::libbrotlicommon-1.0.9-h166bdaf_7
   libbrotlidec       conda-forge/linux-64::libbrotlidec-1.0.9-h166bdaf_7
   libbrotlienc       conda-forge/linux-64::libbrotlienc-1.0.9-h166bdaf_7
-  libcap             conda-forge/linux-64::libcap-2.64-ha37c62d_0
+  libcap             conda-forge/linux-64::libcap-2.65-ha37c62d_0
   libclang           conda-forge/linux-64::libclang-14.0.6-default_h2e3cab8_0
   libclang13         conda-forge/linux-64::libclang13-14.0.6-default_h3a83d3e_0
   libcups            conda-forge/linux-64::libcups-2.3.3-h3e49a29_2
@@ -227,14 +227,14 @@ The following NEW packages will be INSTALLED:
   pcre               conda-forge/linux-64::pcre-8.45-h9c3ff4c_0
   pillow             conda-forge/linux-64::pillow-9.2.0-py310hbd86126_2
   ply                conda-forge/noarch::ply-3.11-py_1
-  portaudio          conda-forge/linux-64::portaudio-19.6.0-h57a0ea0_5
+  portaudio          conda-forge/linux-64::portaudio-19.6.0-h8e90077_6
   pthread-stubs      conda-forge/linux-64::pthread-stubs-0.4-h36c2ea0_1001
-  pulseaudio         conda-forge/linux-64::pulseaudio-14.0-h7f54b18_8
+  pulseaudio         conda-forge/linux-64::pulseaudio-14.0-h0868958_9
   pyparsing          conda-forge/noarch::pyparsing-3.0.9-pyhd8ed1ab_0
   pyqt               conda-forge/linux-64::pyqt-5.15.7-py310h29803b5_0
   pyqt5-sip          conda-forge/linux-64::pyqt5-sip-12.11.0-py310hd8f1fbe_0
   python-dateutil    conda-forge/noarch::python-dateutil-2.8.2-pyhd8ed1ab_0
-  qt-main            conda-forge/linux-64::qt-main-5.15.4-ha5833f6_2
+  qt-main            conda-forge/linux-64::qt-main-5.15.6-hc525480_0
   sip                conda-forge/linux-64::sip-6.6.2-py310hd8f1fbe_0
   sqlite             conda-forge/linux-64::sqlite-3.39.3-h4ff8645_0
   toml               conda-forge/noarch::toml-0.10.2-pyhd8ed1ab_0
@@ -301,4 +301,4 @@ result.plateau_found
 
 # output
 
-false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 10 September 2022 12:22">Saturday 10 September 2022</span>. Using Julia version 1.8.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
+false</code></pre><p>In this case, eventually the binning analysis returns <span>$R_X = 0$</span>, since the blocks start comparing literally identical elements. Notice that this case would return a <code>plateau_found</code> if it were not for the check if any of the <span>$R_X$</span> values were too small. (In principle this case also would result from a data stream with a defined periodicity, despite having correlations, but this is unavoidable.)</p><div class="admonition is-success"><header class="admonition-header">Tip</header><div class="admonition-body"><p>This is the most dangerous case to automate because the <a href="../api/#Statistics.var-Tuple{BinningAccumulator}"><code>var</code></a>iance of such a data stream is naturally very small relative to the <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>. As is the case with all Monte Carlo simulations, or statistical data streams, one should be <em>very</em> wary when the error is a mathematical zero, or vanishingly small compared to the calculated <a href="../api/#Statistics.mean-Tuple{BinningAccumulator}"><code>mean</code></a>.</p></div></div></article><nav class="docs-footer"><a class="docs-footer-prevpage" href="../">« Home</a><a class="docs-footer-nextpage" href="../accumulators/">Accumulator Hierarchy »</a><div class="flexbox-break"></div><p class="footer-message">Powered by <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> and the <a href="https://julialang.org/">Julia Programming Language</a>.</p></nav></div><div class="modal" id="documenter-settings"><div class="modal-background"></div><div class="modal-card"><header class="modal-card-head"><p class="modal-card-title">Settings</p><button class="delete"></button></header><section class="modal-card-body"><p><label class="label">Theme</label><div class="select"><select id="documenter-themepicker"><option value="documenter-light">documenter-light</option><option value="documenter-dark">documenter-dark</option></select></div></p><hr/><p>This document was generated with <a href="https://github.com/JuliaDocs/Documenter.jl">Documenter.jl</a> version 0.27.19 on <span class="colophon-date" title="Saturday 10 September 2022 18:20">Saturday 10 September 2022</span>. Using Julia version 1.8.1.</p></section><footer class="modal-card-foot"></footer></div></div></div></body></html>
